app/assets/stylesheets/layout.scss
/* ... */
.button {
  background: $brand;
  font-size: $base-font-size;

  &:hover {
    text-decoration: none !important;
  }

  &.warning,
  &.warning:hover {
    color: #000;
  }
}

.button.hollow {
  border: 1px solid $link;
  color: $link;
}

.button.hollow.error {
  border-color: $alert-border;
  color: $color-alert;
}

.postfix.button {
  padding: 0;
}

.clear {
  clear: both;
}

.inline {
  display: inline !important;
}

.inline-block {
  display: inline-block;
}

.sidebar-divider {
  border-top: 1px solid $border;
  margin-top: $line-height;

  &:first-child {
    margin-top: 0;
  }
}

.f-dropdown {
  li a {
    font-size: $small-font-size;

    &:hover {
      color: $link-hover;
    }
  }

  li:hover,
  .f-dropdown li:focus {
    background: #fff;
  }

  &.open {
    outline: none;
  }
}

.margin {
  margin-bottom: $line-height;
  margin-top: $line-height;
}

.margin-top {
  margin-top: $line-height;
}

.margin-bottom {
  margin-bottom: $line-height;
}

.margin-left {
  margin-left: $line-height;
}

.margin-right {
  margin-right: $line-height;
}

.no-margin-top {
  margin-top: rem-calc(-24);
}

.padding {
  padding-bottom: $line-height;
  padding-top: $line-height;
}

.light {
  background: $light;
}

.highlight {
  background: $highlight;
}

.icon-check {
  color: $check;
}

.wrapper {
  min-height: 100%;
  margin: 0 auto (-$line-height) * 12;
  height: auto !important;
  height: 100%;
}

.footer,
.push {
  clear: both;
  min-height: $line-height * 12;
}

.ie-callout {
  position: absolute;
  top: 0;
  width: 100%;

  .close {
    font-size: rem-calc(34);
    top: 20%;
  }
}

.menu.simple {
  border-bottom: 1px solid $border;
  clear: both;
  margin-bottom: $line-height / 2;

  li {
    font-size: $base-font-size;
    margin-bottom: 0;
    margin-right: $line-height / 2;

    @include breakpoint(medium) {
      margin-right: $line-height * 1.5;
    }

    a {
      color: $text;
      display: inline-block;
      font-weight: bold;
      position: relative;
      text-align: left;

      &:hover {
        color: $link;
      }
    }

    &.active {
      border-bottom: 2px solid $brand;
      color: $brand;
    }

    &:not(.active) {
      margin-bottom: $line-height / 3;
    }
  }

  h2 {
    font-size: $base-font-size;
  }

  &.vertical li {
    display: block;
  }
}

.menu.vertical {
  margin: $line-height 0;
  padding: $line-height 0;

  li {
    margin-bottom: $line-height;

    a {
      color: $text-medium;
      padding: 0;

      &.active {
        font-weight: bold;
        color: $brand;
      }
    }

    h2 {
      font-size: $base-font-size;
    }

    &.active {
      border-bottom: 2px solid $brand;
      color: $brand;
    }
  }

  &.no-margin-top {
    margin-top: 0;
  }

  &.no-padding-top {
    padding-top: 0;
  }
}

.small {
  font-size: $small-font-size;
}

.relative {
  position: relative;
}

.logo {
  @include logo;
}

.close-button {
  color: $text;
  top: $line-height / 2;
}

.back,
.icon-angle-left {
  clear: both;
  color: $text-medium;
  display: inline-block;
}

.back:not([class^="icon-"]) {
  text-decoration: underline;
}

.tabs-content {
  border: 0;
}

.tabs {
  border-left: 0;
  border-right: 0;
  border-top: 0;
  margin-bottom: $line-height;

  .tabs-title {
    font-size: $base-font-size;
    margin-bottom: 0;
  }

  .tabs-title > a {
    color: $text-medium;
    margin-bottom: rem-calc(-1);
    margin-right: $line-height;

    &[aria-selected='true'],
    &.is-active {
      color: $brand;
      border-bottom: 2px solid $brand;
      font-weight: bold;
    }
  }

  h2,
  h3 {
    font-size: $base-font-size;
  }
}

.button.float-right ~ .button.float-right {
  margin: 0 $line-height / 2;
}

.pagination .current {
  background: $brand;
}

.uppercase {
  text-transform: uppercase;
}

.truncate-horizontal-text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.align-top {
  vertical-align: top;
}

.align-middle {
  vertical-align: middle;
}

.table {
  display: table;
}

.table-cell {
  display: table-cell;
}

.off-canvas-content {
  box-shadow: none;
}

.uppercase {
  text-transform: uppercase;
}

// 02. Header
// ----------

header {
  background: $brand;
  border-bottom: 1px solid $border;
  margin-bottom: $line-height;

  .selected {
    border-bottom: 1px solid #fff;
  }

  .locale {
    float: left;
    height: $line-height * 1.5;
    margin-left: $line-height / 2;
  }

  .external-links {
    float: none;
    padding: rem-calc(6) 0;
    text-align: center;

    @include breakpoint(medium) {
      float: right;
    }
  }
}

.top-bar {
  background: $brand !important;
  color: #fff;
  height: $line-height * 2;
  line-height: $line-height * 2;
  padding-bottom: 0;
  padding-top: 0;

  @include breakpoint(medium) {
    padding: 0;
  }

  .top-bar-title a {
    @include logo;
    line-height: rem-calc(80);

    @include breakpoint(medium) {
      line-height: rem-calc(80);
    }

    &:hover {
      text-decoration: none;
    }
  }

  ul {
    background: none;
    padding-right: rem-calc(15);
  }

  .menu > li {
    display: block;

    @include breakpoint(medium) {
      display: table-cell;
      height: $line-height * 3.5;
    }

    a {
      color: #fff;
      padding-left: 0;

      @include breakpoint(medium) {
        font-size: $small-font-size;
        padding: rem-calc(11) rem-calc(16);
      }
    }

    .button {
      text-align: left;

      @include breakpoint(medium) {
        background: #fff;
        color: $brand;
        text-align: center;
      }
    }
  }

  .menu-icon.dark {
    height: 20px;

    &::after,
    &:hover::after {
      background: #fff;
      box-shadow: 0 7px 0 #fff, 0 14px 0 #fff;
    }
  }

  .menu {

    &.is-dropdown-submenu {
      background: #fff;
      margin: 0;
      margin-top: rem-calc(-24);
      padding: 0;
    }

    .is-submenu-item {
      display: block;
      height: auto;
      margin-bottom: 0;

      a {
        color: $text;
      }
    }
  }
}
/* ... */

